# bingefriend-shows-core

./: .gitignore  pyproject.toml
